Add project: Image recognizer

--- a/projects.html
+++ b/projects.html
@@ -13,5 +13,11 @@ title: Dự án
             <h3><a target="_blank" href="https://github.com/dathoangnd/gonet">gonet</a></h3>
             <p class="project-desc">Thư viện Neural Network cho Go.</p>
         </li>
+
+        <li>
+            <span class="date">Bắt đầu từ 04/2020</span>
+            <h3><a target="_blank" href="/projects/image-recognizer">Image recognizer</a></h3>
+            <p class="project-desc">Nhận diện hình ảnh qua webcam.</p>
+        </li>
     </ul>
 </div>
