--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,6 @@ title: Liên hệ
     <input type="email" id="email" name="_replyto" class="full-width"><br>
     <label for="message">Tin nhắn</label>
     <textarea name="message" id="message" cols="30" rows="10" class="full-width"></textarea><br>
-    <input type="submit" value="Send" class="button">
+    <input type="submit" value="Gửi" class="button">
   </form>
 </div>
