Add JK. Roboling project

--- a/projects.html
+++ b/projects.html
@@ -19,5 +19,11 @@ title: Dự án
             <h3><a target="_blank" href="/projects/image-recognizer">Image recognizer</a></h3>
             <p class="project-desc">Nhận diện hình ảnh qua webcam.</p>
         </li>
+
+        <li>
+            <span class="date">Bắt đầu từ 04/2020</span>
+            <h3><a target="_blank" href="/projects/jk-roboling">J.K. Roboling</a></h3>
+            <p class="project-desc">Sáng tác truyện Harry Potter như J.K. Rowling.</p>
+        </li>
     </ul>
 </div>
