--- a/projects/jk-roboling.html
+++ b/projects/jk-roboling.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: JK. Roboling
+title: J.K. Roboling
 custom_head: projects/jk-roboling.html
 custom_scripts: projects/jk-roboling.html
 ---
