--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@ title: Dự án
         <li>
             <span class="date">Bắt đầu từ 04/2020</span>
             <h3><a target="_blank" href="/projects/jk-roboling">J.K. Roboling</a></h3>
-            <p class="project-desc">Sáng tác truyện Harry Potter như J.K. Rowling.</p>
+            <p class="project-desc">Sáng tác truyện Harry Potter như J.K. Rowling!</p>
         </li>
     </ul>
 </div>
