--- a/projects.html
+++ b/projects.html
@@ -21,9 +21,9 @@ title: Dự án
         </li>
 
         <li>
-            <span class="date">Bắt đầu từ 05/2020</span>
-            <h3><a target="_blank" href="/projects/jk-roboling">J.K. Roboling</a></h3>
-            <p class="project-desc">Sáng tác truyện Harry Potter như J.K. Rowling!</p>
+            <span class="date">Bắt đầu từ 02/2022</span>
+            <h3><a target="_blank" href="https://donotblock.me">DoNotBlock.Me</a></h3>
+            <p class="project-desc">Truy cập bất kỳ website nào bị chặn.</p>
         </li>
     </ul>
 </div>
